@@ -6127,51 +6127,6 @@ SEXP R_igraph_community_to_membership(SEXP graph, SEXP pmerges,
   return result;
 }
 
-SEXP R_igraph_community_leading_eigenvector_step(SEXP graph, 
-						 SEXP pmembership,
-						 SEXP pcommunity,
-						 SEXP peigenvector) {
-
-  igraph_t g;
-  igraph_vector_t membership;
-  igraph_integer_t community=REAL(pcommunity)[0];
-  igraph_bool_t split;
-  igraph_vector_t eigenvector, *ppeigenvector=0;
-  igraph_real_t eigenvalue;
-  SEXP result, names;
-
-  R_igraph_before();
-
-  R_SEXP_to_igraph(graph, &g);
-  R_SEXP_to_vector_copy(pmembership, &membership);
-  if (LOGICAL(peigenvector)[0]) {
-    ppeigenvector=&eigenvector;
-    igraph_vector_init(ppeigenvector, 0);
-  }
-  igraph_community_leading_eigenvector_step(&g, &membership, community, 
-					    &split, ppeigenvector, &eigenvalue);
-  PROTECT(result=NEW_LIST(4));
-  SET_VECTOR_ELT(result, 0, R_igraph_vector_to_SEXP(&membership));
-  igraph_vector_destroy(&membership);
-  SET_VECTOR_ELT(result, 1, NEW_LOGICAL(1));
-  LOGICAL(VECTOR_ELT(result, 1))[0]=split;
-  SET_VECTOR_ELT(result, 2, R_igraph_0orvector_to_SEXP(ppeigenvector));
-  if (ppeigenvector) { igraph_vector_destroy(ppeigenvector); }
-  SET_VECTOR_ELT(result, 3, NEW_NUMERIC(1));
-  REAL(VECTOR_ELT(result, 3))[0]=eigenvalue;  
-  PROTECT(names=NEW_CHARACTER(4));
-  SET_STRING_ELT(names, 0, CREATE_STRING_VECTOR("membership"));
-  SET_STRING_ELT(names, 1, CREATE_STRING_VECTOR("split"));
-  SET_STRING_ELT(names, 2, CREATE_STRING_VECTOR("eigenvector"));
-  SET_STRING_ELT(names, 3, CREATE_STRING_VECTOR("eigenvalue"));
-  SET_NAMES(result, names);
-
-  R_igraph_after();
-
-  UNPROTECT(2);
-  return result;
-}
-
 SEXP R_igraph_girth(SEXP graph, SEXP pcircle) {
   
   igraph_t g;
