@@ -1,6 +1,14 @@
+2008-01-19  Gabor Csardi  <csardi@rmki.kfki.hu>
+
+	* interfaces/R/igraph/R/community.R (leading.eigenvector.community.step) :
+	updated
+	* interfaces/R/src/rinterface.c.in 
+	(R_igraph_community_leading_eigenvector_step) : removed, generated by 
+	stimulus
+
 2008-01-17  Gabor Csardi  <csardi@rmki.kfki.hu>
 
-	* interfaces/R/igraph/R/centrality.R (leading.eigenvector.community) 
+	* interfaces/R/igraph/R/community.R (leading.eigenvector.community) 
 	* interfaces/R/src/rinterface.c.in (R_igraph_community_leading_eigenvector)
 	: removed, generated by stimulus
 
